--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="Style-files/style.css">
 </head>
 <body>
+<div class="conteiner">
+    <div class="calculator">
+        <div><h3 class="text">Bill Amound: <input id="bill" type="text"></h3></div>
+        <div><h3 class="text">Percentage Tip:<input id="procent" type="text"></h3></div>
+        <div><h3 class="text">Tip amound:<input id="calcprocent" type="text" readonly value=""></h3></div>
+        <div><h3 class="text">Total:<input id="calctotal" type="text" readonly value=""></h3></div>
 
+        <button id="total" type="button">Total</button>
+    </div>
+</div>
+
+
+<script src="Script-files/script.js"></script>
 </body>
 </html>
